k8s/langfuse-zookeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langfuse-zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: langfuse-zookeeper
  template:
    metadata:
      labels:
        app: langfuse-zookeeper
    spec:
      containers:
      - name: zookeeper
        image: zookeeper:3.9
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: langfuse-zookeeper
spec:
  selector:
    app: langfuse-zookeeper
  ports:
  - port: 2181
